syntax = "proto3";

package partyaffairs.api.partyaffairs.v1;

option go_package = "./v1;v1";

import "validate/validate.proto";


message TaskValue{
  message User{
    uint32 id = 1;
    string nickName = 2;
    optional string realName = 3;
    optional string avatarUrl = 4;
    optional string gender = 5;
  }

  uint32 id = 1;
  uint32 task_id = 2;
  uint32 user_id = 3;
  string value = 4;
  uint32 created_at = 5;
  uint32 updated_at = 6;
  User user = 7;
}

message GetCurTaskValueRequest{
  uint32 task_id = 1[(validate.rules).uint32 = {gt: 0}];
}

message GetTaskValueRequest{
  uint32 task_id = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 user_id = 2[(validate.rules).uint32 = {gt: 0}];
}

message PageTaskValueRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  uint32 task_id = 3[(validate.rules).uint32 = {gt: 0}];
  optional uint32 user_id = 4[(validate.rules).uint32 = {gt: 0}];
}

message PageTaskValueReply{
  uint32 total = 1;
  repeated TaskValue list = 2;
}

message ExportTaskValueRequest{
  uint32 task_id = 1[(validate.rules).uint32 = {gt: 0}];
}

message AddTaskValueRequest {
  uint32 task_id = 1[(validate.rules).uint32 = {gt: 0}];
  string value = 2[(validate.rules).string = {min_len: 1}];
}

message UpdateTaskValueRequest {
  uint32 task_id = 1[(validate.rules).uint32 = {gt: 0}];
  string value = 2[(validate.rules).string = {min_len: 1}];
}

message DeleteTaskValueRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}


